istio/destination-rule-payment.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
spec:
  host: payment
  subsets:
  - labels:
      app: payment
    name: app-payment
---
