istio/destination-rule-payment_cb_policy_version_v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-v2-cb
spec:
  host: payment
  subsets:
    - name: version-v1
      labels:
        version: v1
    - name: version-v2
      labels:
        version: v2
      trafficPolicy:
        connectionPool:
          http:
            http1MaxPendingRequests: 1
            maxRequestsPerConnection: 1
          tcp:
            maxConnections: 1
        outlierDetection:
          baseEjectionTime: 120.000s
          consecutiveErrors: 1
          interval: 1.000s
          maxEjectionPercent: 100
