istio/destination-rule-payment_lb_policy_app.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
spec:
  host: payment
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
