istio/virtual-service-movies-v1_100.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
  - movies
  http:
  - route:
    - destination:
        host: movies
        subset: version-v1
      weight: 100
---
