istio/virtual-service-payment-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-timeout
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
    timeout: 1.000s
