istio/virtual-service-payment-v1-2-3-4.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
spec:
  hosts:
  - payment
  http:
  - retries:
      attempts: 3
      perTryTimeout: 4.000s
    route:
    - destination:
        host: payment
        subset: version-v1
      weight: 25
    - destination:
        host: payment
        subset: version-v2
      weight: 25
    - destination:
        host: payment
        subset: version-v3
      weight: 25
    - destination:
        host: payment
        subset: version-v4
      weight: 25  
---
