istio/virtual-service-payment-v3-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-v3-delay
spec:
  hosts:
  - payment
  http:
  - fault:
      delay:
        fixedDelay: 7.000s
        percent: 100
    route:
    - destination:
        host: payment
        subset: version-v3
---
