istio/virtual-service-payment_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
    retries:
      attempts: 3
      perTryTimeout: 4.000s
---
